--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,30 @@
     'sidebar header header header'
     'sidebar main main main';
 }
+
+
+@keyframes slide-left {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-right {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.animate-slide-left {
+  animation: slide-left 0.3s forwards;
+}
+
+.animate-slide-right {
+  animation: slide-right 0.3s forwards;
+}
